// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressResults/> should render no results 1`] = `
.c5 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c5:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c5[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c5[aria-pressed="true"]:not([disabled]):hover,
.c5[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c5[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c5[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c6:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c6[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c6[aria-pressed="true"]:not([disabled]):hover,
.c6[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c6[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c0 {
  margin: 0 auto;
  max-width: calc(3 * 1200px / 4);
}

.c1 {
  position: relative;
  padding: 0 2rem;
}

.c2 {
  margin-bottom: 1rem;
}

.c4 {
  min-width: 7rem;
}

.c4 + .c3 {
  margin-left: 1rem;
}

@media (max-width:600px) {
  .c1 {
    padding: 0;
  }
}

<div>
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="wrapper "
      >
        <div
          category="primary"
          class="alert "
        >
          Nous n’avons pas trouvé de résultat pour votre recherche.
        </div>
        <div
          class="btn   "
          role="button"
          tabindex="0"
        >
          Posez votre question
        </div>
        <section
          class="section"
        >
          <div
            class="container"
          >
            <div
              class="wrapper wrapper-dark c0"
            >
              <div
                class="c1"
              >
                <h3
                  class="c2"
                >
                  Avez-vous trouvé la réponse à votre question ?
                </h3>
                <p>
                  <button
                    aria-pressed="false"
                    class="c3 c4 c5"
                  >
                    Non
                  </button>
                  <button
                    aria-pressed="false"
                    class="c3 c4 c6"
                  >
                    Oui
                  </button>
                </p>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AddressResults/> should render results 1`] = `
.c9 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c9:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c9[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c9[aria-pressed="true"]:not([disabled]):hover,
.c9[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c9[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c9[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c10:not([disabled]):hover,
.c10:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c10:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c10[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c10[aria-pressed="true"]:not([disabled]):hover,
.c10[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c10[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c10[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c4 {
  margin: 0 auto;
  max-width: calc(3 * 1200px / 4);
}

.c5 {
  position: relative;
  padding: 0 2rem;
}

.c6 {
  margin-bottom: 1rem;
}

.c8 {
  min-width: 7rem;
}

.c8 + .c7 {
  margin-left: 1rem;
}

.c0 {
  font-size: 1rem;
}

.c1 {
  display: block;
  font-size: 0.9em;
  line-height: 1.5;
  margin: 1rem 0;
}

.c1:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(100,100,100,0.9);
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:visited {
  color: rgba(100,100,100,0.8);
}

.c2 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

.c3 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

@media (max-width:600px) {
  .c5 {
    padding: 0;
  }
}

<div>
  <section
    class="section"
  >
    <div
      class="container"
    >
      <div
        class="wrapper "
      >
        <ul
          class="card-wrapper"
        >
          <li
            class="card"
          >
            <strong
              class="c0"
            >
              Bureau des légendes
            </strong>
            <a
              class="c1"
              href="https://www.openstreetmap.org/?mlat=4&mlon=44&zoom=16"
            >
              adresse inconnue
              <br />
              00700
               
              Partout
            </a>
            <p
              class="c2"
            >
              Tél: 
              <a
                href="tel:+00 000 000 000"
              >
                +00 000 000 000
              </a>
            </p>
            <a
              class="c3"
              href="mailto:email"
            >
              email
            </a>
          </li>
        </ul>
        <div
          class="btn   "
          role="button"
          tabindex="0"
        >
          Posez votre question
        </div>
        <section
          class="section"
        >
          <div
            class="container"
          >
            <div
              class="wrapper wrapper-dark c4"
            >
              <div
                class="c5"
              >
                <h3
                  class="c6"
                >
                  Avez-vous trouvé la réponse à votre question ?
                </h3>
                <p>
                  <button
                    aria-pressed="false"
                    class="c7 c8 c9"
                  >
                    Non
                  </button>
                  <button
                    aria-pressed="false"
                    class="c7 c8 c10"
                  >
                    Oui
                  </button>
                </p>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;
